k0s/deploy/nginx-service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-deploy-blue
  labels:
    run: nginx-blue
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 80
  selector:
    run: nginx-blue
