k0s/deploy/nginx-service-main.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-deploy-main
  labels:
    run: nginx-main
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 8088
    targetPort: 80
  selector:
    run: nginx-main
