k0s/deploy/longhorn-frontend.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-frontend
  namespace: longhorn-storage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.k0s.ohmidasvn.dev`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
      middlewares:
        - name: registry-basic-auth
