k0s/deploy/traefik-dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.k0s.example.com`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      services:
        - kind: TraefikService
          name: api@internal
      middlewares:
        - name: registry-basic-auth
